--- a/widget.ui
+++ b/widget.ui
@@ -69,7 +69,8 @@ QComboBox::down-arrow
                                   stop: 0.5 #DDDDDD, stop: 1.0 #E1E1E1);
   }
 
-QPushButton{
+QPushButton
+{
 /*背景色*/
 background-color: rgba(100, 225, 100, 30);
 /*边框样式*/
@@ -103,6 +104,8 @@ border-style: inset;
 color:rgba(0, 0, 0, 100);
 }
 
+
+
 QWidget#Widget
 {
 background-image: url(:/image/beijing01.png);
@@ -118,7 +121,7 @@ background-image: url(:/image/beijing01.png);
    <widget class="QLabel" name="label_3">
     <property name="geometry">
      <rect>
-      <x>110</x>
+      <x>150</x>
       <y>30</y>
       <width>331</width>
       <height>51</height>
@@ -128,14 +131,14 @@ background-image: url(:/image/beijing01.png);
      <string notr="true">font: 20pt &quot;楷体&quot;;</string>
     </property>
     <property name="text">
-     <string>本地数据库系统管理平台</string>
+     <string>数据库系统管理平台</string>
     </property>
    </widget>
    <widget class="QLineEdit" name="userLineEdit">
     <property name="geometry">
      <rect>
       <x>200</x>
-      <y>100</y>
+      <y>90</y>
       <width>211</width>
       <height>41</height>
      </rect>
@@ -151,7 +154,7 @@ background-image: url(:/image/beijing01.png);
     <property name="geometry">
      <rect>
       <x>120</x>
-      <y>160</y>
+      <y>150</y>
       <width>81</width>
       <height>31</height>
      </rect>
@@ -167,7 +170,7 @@ background-image: url(:/image/beijing01.png);
     <property name="geometry">
      <rect>
       <x>200</x>
-      <y>160</y>
+      <y>150</y>
       <width>211</width>
       <height>41</height>
      </rect>
@@ -185,8 +188,8 @@ background-image: url(:/image/beijing01.png);
    <widget class="QLabel" name="label_4">
     <property name="geometry">
      <rect>
-      <x>30</x>
-      <y>210</y>
+      <x>10</x>
+      <y>290</y>
       <width>111</width>
       <height>31</height>
      </rect>
@@ -202,7 +205,7 @@ background-image: url(:/image/beijing01.png);
     <property name="geometry">
      <rect>
       <x>120</x>
-      <y>100</y>
+      <y>90</y>
       <width>81</width>
       <height>31</height>
      </rect>
@@ -218,7 +221,7 @@ background-image: url(:/image/beijing01.png);
     <property name="geometry">
      <rect>
       <x>330</x>
-      <y>240</y>
+      <y>250</y>
       <width>101</width>
       <height>41</height>
      </rect>
@@ -231,7 +234,7 @@ background-image: url(:/image/beijing01.png);
     <property name="geometry">
      <rect>
       <x>180</x>
-      <y>240</y>
+      <y>250</y>
       <width>101</width>
       <height>41</height>
      </rect>
@@ -249,8 +252,8 @@ background-image: url(:/image/beijing01.png);
     </property>
     <property name="geometry">
      <rect>
-      <x>20</x>
-      <y>240</y>
+      <x>10</x>
+      <y>260</y>
       <width>131</width>
       <height>31</height>
      </rect>
@@ -267,6 +270,105 @@ background-image: url(:/image/beijing01.png);
      <enum>QComboBox::InsertAlphabetically</enum>
     </property>
    </widget>
+   <widget class="QPushButton" name="netConnectPushButton">
+    <property name="geometry">
+     <rect>
+      <x>0</x>
+      <y>30</y>
+      <width>141</width>
+      <height>41</height>
+     </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">QPushButton#netConnectPushButton
+{
+}</string>
+    </property>
+    <property name="text">
+     <string>远程连接</string>
+    </property>
+    <property name="checkable">
+     <bool>true</bool>
+    </property>
+    <property name="checked">
+     <bool>false</bool>
+    </property>
+   </widget>
+   <widget class="QLabel" name="ipLabel">
+    <property name="geometry">
+     <rect>
+      <x>90</x>
+      <y>210</y>
+      <width>61</width>
+      <height>21</height>
+     </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">font: 14pt &quot;Adobe Arabic&quot;;</string>
+    </property>
+    <property name="text">
+     <string>主机IP：</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="portLabel">
+    <property name="geometry">
+     <rect>
+      <x>310</x>
+      <y>210</y>
+      <width>71</width>
+      <height>21</height>
+     </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">font: 14pt &quot;Adobe Arabic&quot;;</string>
+    </property>
+    <property name="text">
+     <string>端口号：</string>
+    </property>
+   </widget>
+   <widget class="QLineEdit" name="portLineEdit">
+    <property name="geometry">
+     <rect>
+      <x>380</x>
+      <y>210</y>
+      <width>113</width>
+      <height>21</height>
+     </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">font: 14pt &quot;Adobe Arabic&quot;;</string>
+    </property>
+    <property name="text">
+     <string>3306</string>
+    </property>
+   </widget>
+   <widget class="QLineEdit" name="ipLineEdit">
+    <property name="geometry">
+     <rect>
+      <x>160</x>
+      <y>210</y>
+      <width>113</width>
+      <height>21</height>
+     </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">font: 14pt &quot;Adobe Arabic&quot;;</string>
+    </property>
+   </widget>
+   <zorder>label_4</zorder>
+   <zorder>label_3</zorder>
+   <zorder>userLineEdit</zorder>
+   <zorder>label_2</zorder>
+   <zorder>pwLineEdit</zorder>
+   <zorder>label</zorder>
+   <zorder>cancelPushButton</zorder>
+   <zorder>loginPushButton</zorder>
+   <zorder>databaseDriversComboBox</zorder>
+   <zorder>netConnectPushButton</zorder>
+   <zorder>ipLabel</zorder>
+   <zorder>portLabel</zorder>
+   <zorder>portLineEdit</zorder>
+   <zorder>ipLineEdit</zorder>
   </widget>
  </widget>
  <layoutdefault spacing="6" margin="11"/>
